test for relationships between pathogen abundance and climate

--- a/scripts/envfit_plot.Rmd
+++ b/scripts/envfit_plot.Rmd
@@ -12,6 +12,8 @@ library(phyloseq)
 library(tidyverse)
 library(vegan)
 library(RColorBrewer)
+library(gridExtra)
+library(gtable)
 ```
 
 #path to raw-data directory (change "path" to your raw-data directory)
